resolve new parallax issues with overflow region

--- a/src/styles.css
+++ b/src/styles.css
@@ -60,7 +60,7 @@ footer {
 #about {
   position: relative;
   width: 100vw;
-  height: 110vh;
+  height: 110vh auto;
   background-image: url("assets/images/b1.jpg");
   background-position: center;
   background-repeat: no-repeat;
@@ -89,9 +89,13 @@ footer {
 
 .bio {
   position: absolute;
-  top: 15vh;
+  top: 10vh;
   text-align: center;
   margin: 2%;
+}
+
+.bio h1 {
+  font-size: 2rem;
 }
 
 .bio p a, .bio p a:hover {
@@ -237,6 +241,22 @@ img.camping, img.salon {
   }
 }
 
+@media screen and (min-width: 1201px) and (max-width: 1450px) {
+  #skills-list {
+    padding-top: 0;
+  }
+  .card-header  {
+    padding-top: 6px;
+    padding-bottom: 6px;
+  }
+  .bio {
+    top: 1vh;
+  }
+  .me img {
+    top: 5vh;
+  }
+}
+
 @media screen and (max-width: 1200px) {
   #about {
     background-attachment: scroll;
@@ -251,14 +271,6 @@ img.camping, img.salon {
     top: 0vh;
   }
 }
-
-/* @media screen and (max-width: 935px) {
-  .bio {
-    position: relative;
-    align-items: flex-start;
-    top: 0vh;
-  }
-} */
 
 @media screen and (max-width: 1024px) and (max-height: 1366px) {
   #splash {
